--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -29,7 +29,9 @@
         color: $main-color;
         transition: all 0.2s ease-in-out;
         white-space: nowrap;
-        &:hover {
+        &:hover,
+        &:focus,
+        &:actives {
           color: $secondary-color;
         }
       }
