--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -31,7 +31,7 @@
         white-space: nowrap;
         &:hover,
         &:focus,
-        &:actives {
+        &:active {
           color: $secondary-color;
         }
       }
